workloads/routing/grafana/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: grafana
spec:
  hosts:
  - grafana.dev.growbin.app
  gateways:
  - istio-system/eco2-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: dev-grafana.grafana.svc.cluster.local
        port:
          number: 80
